@startuml
skinparam dpi 300

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primaryKey(field) <u>field</u>
!define foreignKey(field) <i>field</i>

Table(users, "users") {
  primaryKey(id): BIGINT
  name: VARCHAR(255)
  email: VARCHAR(255)
  created_at: TIMESTAMP
}

Table(locations, "locations") {
  primaryKey(id): BIGINT
  name: VARCHAR(255)
  description: TEXT
  created_at: TIMESTAMP
}

Table(items, "items") {
  primaryKey(id): BIGINT
  name: VARCHAR(255)
  description: TEXT
  foreignKey(report_id): BIGINT
  foreignKey(claimed_by_user_id): BIGINT
  created_at: TIMESTAMP
}

Table(reports, "reports") {
  primaryKey(id): BIGINT
  foreignKey(user_id): BIGINT
  foreignKey(location_id): BIGINT
  reported_at: TIMESTAMP
  status: BOOLEAN
}

' Relationships
users ||--o{ reports : creates
locations ||--o{ reports : has
reports ||--o{ items : includes
users ||--o{ items : may claim

@enduml
